Fix button spacing on mobile
Fix button spacing for the preferences form on mobile.

--- a/src/LondonTravel.Site/assets/styles/css/site.css
+++ b/src/LondonTravel.Site/assets/styles/css/site.css
@@ -8,6 +8,10 @@ body {
     padding-top: 70px;
 }
 
+.btn-wrapper {
+    margin-bottom: 5px;
+}
+
 .btn-amazon {
     background-color: #FF9900;
     border-color: rgba(0,0,0,0.2);
